2005-06-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_xyzlabel): Allow string variable or expression for
	font name. This is a variant of a patch from Shigeharu TAKENO.

2005-06-19  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src src/set.c (set_decimalsign): New command option
	    `set decimalsign {locale {"locale_spec"}}`
	 takes the decimal sign character from the locale specified for the
	 locale "locale_spec" or from the locale specified in the enviromental
	 variables LC_NUMERIC, LC_ALL, or LANG.

	* src/save.c (save_set_all): Save the current locale for LC_NUMERIC
	as well as the actual current value of decimalsign.

	 * src/show.c (num_to_str) src/util.c (gprintf): Allow for the
	 possibility that the current decimal sign is a comma rather than a dot.

	 * src/variable.c (locale_handler): Expand output by `show locale` to
	 show the current values of LC_NUMERIC LC_CTYPE and LC_TIME.

	 * src/unset.c (unset_decimalsign): If the decimalsign is reset using
	 `unset decimalsign`, then set the internal locale to C.

2005-06-18  Harald Harders  <h.harders@tu-bs.de>

	* docs/gnuplot.doc: Revise the section on "set arrow".

2005-06-16  Harald Harders  <h.harders@tu-bs.de>

	* docs/gnuplot.doc: Document `set style line <n> linecolor <colorspec>`

2005-06-15  Ethan Merritt  <merritt@u.washington.edu>

	* demo/stringvar.dem docs/gnuplot.doc src/eval.c: Rename substring
	built-in function to substr(string,beg,end).

2005-01-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/pm.trm src/os2/gclient.c src/os/pm_msgs.h: Move definition of
	message codes for communication between gnuplot (pm.trm) and gnupmdrv
	(gclient.c) to a new separate file pm_msgs.h. Replace hard-wired codes
	in gclient.c by symbolic names.

	* term/pm.trm (PM_set_font): Fix font selection for pm terminal in case
	of empty font string.

	* src/plot.c (RexxInterface): Replace input_line[] by gp_input_line[]
	in code sections which are only compiled on OS/2.
